EV-180 fixed table overflow on small screen width

--- a/src/global.css
+++ b/src/global.css
@@ -2,6 +2,7 @@ html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	overflow-x: hidden;
 }
 
 body {
@@ -64,3 +65,9 @@ button:not(:disabled):active {
 button:focus {
 	border-color: #666;
 }
+
+.table-overflow-wrapper {
+	overflow-x: auto;
+	max-width: 100%;
+}
+
